# kubeflow-test

./: .cursorignore  .env  .env_example  .gitignore  CLAUDE.md  DESCRIPTION.md  README.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  VALIDATION_SUMMARY.md  iris_pipeline.yaml  iris_pipeline_fixed.yaml  makefile  pyproject.toml  pytest.ini
notebooks/: 01_training_notebook.py  convert_to_notebook.py
ops/kubeflow/: QUICK_REFERENCE.md  README.md  RUN_PIPELINE.md  install_kubeflow_v4.sh  install_kubeflow_v5.sh  kubeflow.sh  kubeflow_port_forward.sh  uninstall_kubeflow.sh  upgrade_kubeflow_v2.14.0.sh  upgrade_kubeflow_v2.3.0.sh
ops/kubeflow/backup/: FIX_UI_PROXY_ERROR.md  check_api_versions.sh  fix_ml_pipeline.sh  fix_pipeline_backend.sh  install_kfp_standalone.sh  install_kfp_working.sh  install_kubeflow.sh  install_kubeflow_clean.sh  install_kubeflow_minimal.sh  install_kubeflow_v2.sh  install_kubeflow_v3.sh  port_forward_kfp.sh  view_logs.sh
src/: evaluate_model.py  main.py  monitor_drift.py  run_pipeline.py  serve_model.py  train_model.py  upload_pipeline.py
src/models/: evaluation_report.json  metrics.json  model.pkl  model_info.json
src/pipelines/: iris_pipeline.py  iris_pipeline_fixed.py
