[project]
name = "kubeflow-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.1",
    "kfp>=2.14.1",
    "kfp-server-api>=2.5.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "evidently>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.5",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
]

[tool.uv]
resolution = "highest"
required-version = ">=0.7.19"
